books/projects/rac/tests/yaml_test/program_structure/mutually-recursive-function.ref.stderr
mutually-recursive-function.cpp:3 (9-10): syntax error, unexpected ';', expecting '{'
  3 | int bar();
    |          ^
